--- a/calculator.html
+++ b/calculator.html
@@ -14,6 +14,10 @@ function cuarta() {
 var num = document.getElementById("n1");
 num.value = Math.pow(num.value, 4);
 }
+function square() {
+var num = document.getElementById("n1");
+num.value = Math.pow(num.value, 2);
+}
 </script>
 </head>
 <body>
@@ -23,6 +27,7 @@ Number:
 <button onclick="cube()"> x^3 </button>
 <button onclick="sen()"> sin(x) </button>
 <button onclick="cuarta()"> x^4 </button>
+<button onclick="square()"> x^2 </button>
 </body>
 </html>
 =================================================
