--- a/calculator.html
+++ b/calculator.html
@@ -18,6 +18,10 @@ function square() {
 var num = document.getElementById("n1");
 num.value = Math.pow(num.value, 2);
 }
+function inv() {
+var num = document.getElementById("n1");
+num.value = 1/num.value;
+}
 </script>
 </head>
 <body>
@@ -28,6 +32,7 @@ Number:
 <button onclick="sen()"> sin(x) </button>
 <button onclick="cuarta()"> x^4 </button>
 <button onclick="square()"> x^2 </button>
+<button onclick="inv()"> 1/x </button>
 </body>
 </html>
 =================================================
